# calculator

./: .gitignore  README.md  pyproject.toml  requirements.txt
calculator/: application.py  handlers.py  mixins.py  validators.py  widgets.py
