[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["tenessy0570 <tenessy0570@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
